overflow issues

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -12,6 +12,7 @@
 html {
 	scroll-behavior: smooth;
 	width: 100vw;
+	overflow-y: hidden;
 }
 
 body {
